# Recompile

./: .gitignore  README.md  pyproject.toml
recompile/: assembler.py  code_gen.py  compiler.py  instruction.py  main.py  parser.py  runner.py  syntax.py
recompile/backend/: assembler.py  code_gen.py  instruction.py
recompile/frontend/: parser.py
recompile/test/: test_regex.py
