[project]
name = "Recompile"
version = "0.0.1"
description = "A custom regular expression compiler"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-file = "LICENSE"

[project.scripts]
recompiler = "recompile.main:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
